--- a/landing.html
+++ b/landing.html
@@ -15,7 +15,7 @@
 <h1 class="text-center">Gracias por subscribir.</h1>
 <br>
 <br>
-<h3 class="text-center"><a href="https://florayfaunanica.github.io" style="color:#fff;">Ir al Inicio</a></h3>
+<h3 class="text-center"><a href="https://florayfaunanica.github.io" style="color:#fff;text-decoration:none;">Ir al Inicio</a></h3>
 <br>
 <br>
     <div class="text-center copyright">&copy; 2018 Nicaragua Flora y Fauna | <a target="_blank" style="color:#fff;" href="https://nicaraguadigital.github.io">Fundación Nicaragua Digital </a> | Desarrollado por <a target="_blank" style="color:#fff;" href="https://am-software.github.io"> AM Software</a></div> 
